--- a/seminario-React/src/assets/styles/LoginComponent.css
+++ b/seminario-React/src/assets/styles/LoginComponent.css
@@ -11,11 +11,18 @@ body {
   background-size:contain;
   background-repeat:repeat;
   min-height: 100vh;
-  display: flex;
-  justify-content:center;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content:center; */
+  /* align-items: center; */
 }
 
+.login-page {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px; /* antes 90px, ahora menos para subir la ventana */
+}
 
 /*-------------------------------------------------------
 /* Título: Iniciar sesión */
@@ -111,36 +118,51 @@ button:hover {
 ------------- configuración ventana ------------------
 ------------ donde se ingresan los datos -------------
 -----------------------------------------------------*/
+.login-container {
+  background: white;
+  width: 600px;
+  max-width: 95vw;
+  border-radius: 20px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  display: flex;
+  overflow: hidden;
+  max-width: 600px;
+  max-height: 600px;
+}
+
 .login-form-side {
-  width: 50%;
-  flex: 1;
-  padding: 3rem;
+  width: 60%;
+  flex: none;
+  padding: 2.5rem 2rem;
   background: white; 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap:4rem;
+  gap:2rem;
+}
+
+.login-image-side {
+  width: 300px;
+  min-width: 200px;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 600px;
+}
+
+.login-image-side img {
+  max-width: 98%;
+  max-height: 550px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
 }
 /*----------------------------------------------------*/
 
 /*-----------------------------------------------------
 ----- configuración de imagen columna de pokemones ----
 ------------------------------------------------.....*/
-.login-image-side {
-  width: 50%;
-  flex: 1;
-  background: #f5f5f5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.login-image-side img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
 /*------------------------------------------------*/
 
 
