--- a/seminario-React/src/assets/styles/MazosPage.css
+++ b/seminario-React/src/assets/styles/MazosPage.css
@@ -50,6 +50,7 @@ body {
 .mazos-card {
   position: relative;
   z-index: 2;
+  text-align: center;
 }
 
 @media (max-width: 1400px) {
@@ -150,6 +151,7 @@ body {
   list-style: none;
   padding: 0;
   margin: 1rem 0 0 0;
+  text-align: center;
 }
 
 .mazos-list li {
@@ -171,6 +173,7 @@ body {
   font-weight: bold;
   background: transparent;
   cursor: pointer;
+  text-align: center;
 }
 
 
@@ -184,6 +187,7 @@ body {
   background: #f5f5f5;
   margin-bottom: 0.5rem;
   transition: background 0.2s;
+  text-align: center;
 }
 
 .mazo-nombre.seleccionado {
@@ -244,7 +248,7 @@ body {
 
 .mazos-modal h3 {
   margin-bottom: 1.2rem;
-  color: #3b4cca;
+  color: #10640dd7;
 }
 
 .mazos-cartas-list {
@@ -325,4 +329,53 @@ body {
   width: auto;
   padding: 0.5rem 0.8rem;
   font-size: 1rem;
+}
+
+
+/* carteles de cambiar nombre */
+.mazos-editar-form {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+}
+
+.mazos-editar-input {
+  padding: 0.4rem 0.7rem;
+  border-radius: 8px;
+  border: 1px solid #bdbdbd;
+  font-size: 1rem;
+  width: 140px;
+}
+
+.mazos-accion-btn.cancelar {
+  background: #e0e0e0;
+  color: #333;
+  font-size: 1rem;
+}
+
+.mazos-accion-btn.cancelar:hover {
+  background: #bdbdbd;
+}
+
+/* boton guardar */
+.mazos-accion-btn {
+  background: #1bb15faf;
+  color: #fff;
+  border-radius: 8px;
+  padding: 0.5rem 1.1rem;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.mazos-vacio {
+  color: #ce9641;  
+  text-align: right;
+  font-size: 10.1rem;
+  font-weight: 500;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
 }
