--- a/seminario-React/src/index.css
+++ b/seminario-React/src/index.css
@@ -28,6 +28,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  height: 100%;
+  overflow-y: auto !important;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -65,4 +68,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+html, body {
+  min-height: 100vh;
+  height: 100%;
+  overflow-y: auto !important;
+  box-sizing: border-box;
 }
