--- a/seminario-React/src/assets/styles/EditarUsuarioPage.css
+++ b/seminario-React/src/assets/styles/EditarUsuarioPage.css
@@ -124,6 +124,9 @@ body {
   color: #e74c3c;
   font-size: 0.9rem;
   margin-top: 0.5rem;
+  list-style: disc;
+  text-align: left;
+  padding-left: 1.5rem;
 }
 
 .mensaje-ok {
